@startuml Diagrama do E-commerce
entity "Users" as Users {
    * user_id : UUID <<PK>>
    --
    username : VARCHAR(50)
    email : VARCHAR(100)
    password : VARCHAR(100)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "Products" as Products {
    * product_id : UUID <<PK>>
    --
    name : VARCHAR(100)
    description : TEXT
    price : DECIMAL(10,2)
    stock_quantity : INT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "ImageProduct" as ImageProduct {
    * image_product_id : UUID <<PK>>
    --
    product_id : UUID <<FK>>
    url : VARCHAR(255)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "Orders" as Orders {
    * order_id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    total_price : DECIMAL(10,2)
    status : VARCHAR(50)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "OrderItems" as OrderItems {
    * order_item_id : UUID <<PK>>
    --
    order_id : UUID <<FK>>
    product_id : UUID <<FK>>
    quantity : INT
    price : DECIMAL(10,2)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "ShoppingCart" as ShoppingCart {
    * cart_id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    coupon_applied_id: UUID
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "ShoppingCartItems" as ShoppingCartItems {
    * cart_item_id : UUID <<PK>>
    --
    cart_id : UUID <<FK>>
    product_id : UUID <<FK>>
    quantity : INT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "Coupon" as Coupon {
    * coupon_cart_id : UUID <<PK>>
    --
    percentage : DECIMAL(10,2)
    value: DECIMAL(10,2)
    name_coupon: VARCHAR(50)
    valid_coupon: TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

Users ||--o{ Orders : "1:N"
Orders ||--o{ OrderItems : "1:N"
Products ||--o{ OrderItems : "1:N"
Users ||--|| ShoppingCart : "1:1"
ShoppingCart ||--o{ ShoppingCartItems : "1:N"
Products ||--o{ ShoppingCartItems : "1:N"
Products ||--o{ ImageProduct : "1:N"
Coupon ||--o{ ShoppingCart : "1:N"
@enduml
